﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-02-21 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php: Various bug fixes (bug #1435700, bug #1435806,
      undefined indexes).
    * libraries/export/sql.php: New line before values (RFE #1435919).

2006-02-21 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php PMA_getUvaCondition():
      do not test for isset but strlen on orgname of table
    * libraries/Table.class.php: *NEW* class PMA_Table
    * tbl_addfield.php, tbl_create.php:
      use Table.class.php
    * db_details_qbe.php, db_details_structure.php, tbl_alter.php, sql.php,
      libraries/common.lib.php, libraries/tbl_properties_table_info.inc.php,
      libraries/display_export.lib.php, libraries/display_tbl.lib.php,
      libraries/get_foreign.lib.php, libraries/relation.lib.php:
      moved PMA_generateFieldSpec(), PMA_tableIsView(), PMA_countRecords(),
      PMA_generateAlterTable() into class PMA_Table
    * db_operations.php, tbl_move_copy.php, tbl_properties_operations.php,
      libraries\Table.class.php, libraries\tbl_move_copy.php:
      merged libraries\tbl_move_copy.php in class PMA_Table
    * libraries/Table.class.php:
      minor fixes and improvements, formating, documentation
    * libraries/relation.lib.php:
      check if $cfg['Server']['pmadb'] really exists and is selectable,
      minor tweaks and formating

2006-02-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.8.0-rc1 released from QA_2_8 branch

2006-02-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/dbi/mysqli.dbi.lib.php:
      - fixed undefined MYSQLI_BINARY_FLAG constant
      - documentation
    * server_status.php:
      - RFE #1434196 More significant digits in /status
      - replaced number_format() with PMA_formatNumber()
      - coding standards
    * js/querywindow.js, css/phpmyadmin.css.php:
      - RFE #1433382 visulal feat. request for left bar